Create: recommended section

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <header class="navbar">
     <div class="container">
       <div class="navbar-top">
-       <div class="menu">
-        <div class="menu-burger">
-          <span class="menu-burger__line"></span>
+        <div class="menu">
+          <div class="menu-burger">
+            <span class="menu-burger__line"></span>
+          </div>
+          <!-- /.menu-burger -->
+          <span class="navbar-top__title">Sections</span>
         </div>
-        <!-- /.menu-burger -->
-        <span class="navbar-top__title">Sections</span>
-       </div>
-       <!-- /.menu -->
+        <!-- /.menu -->
         <form class="search">
          <button class="search__button"> <img src="img/icons/search.svg" alt="Icon: Search" ></button>
           <input type="text" class="navbar-top__search" placeholder="Search">
@@ -108,7 +108,7 @@
       <li class="mobile-menu__item"><a href="#" class="mobile-menu__link">Health</a></li>
       <li class="mobile-menu__item"><a href="#" class="mobile-menu__link">Education</a></li>
     </ul>
-    <div class="subscribe mobile-menu__subscribe">
+    <div class="mobile-menu__subscribe">
       <img src="img/navbar-top-img.png" alt="Image: Subscribe Image" class="subscribe__img">
       <div class="subscribe__description">
         <span class="subscribe__title">Subscribe Now</span>
@@ -141,7 +141,65 @@
     </div>
     <!-- /.hotnews -->
   </div>
-  <!-- /.overlay -->  
+  <!-- /.overlay --> 
+  <div class="recomended">
+    <div class="container recomended-wrapper">
+      <div class="recomended__use">
+        <img class="recomended__img" src="img/recommended-1.jpg" alt="Image: Recomended 1">
+      </div>
+      <!-- /.recomended__use -->
+      <div class="recomended__right">
+        <div class="recomended__title">
+          <h2>Recommended for you</h2>
+        </div>
+        <div class="recommendation">
+          <div class="cube"></div>
+          <div class="recommendation__title">Food</div>
+          <div class="recommendation__text">
+            <span>For Chicken-Fried Steak, Too Much Is Just Enough</span>
+            <img src="img/icons/recommended-play.svg" alt="Icon: Play">
+          </div>
+        </div>
+        <!-- /.recommendation-1 -->
+        <div class="recommendation">
+          <div class="cube"></div>
+          <div class="recommendation__title">Cars</div>
+          <div class="recommendation__text">
+            <span>Storm Has Car Dealers Doing Swift Business</span>
+          </div>
+        </div>
+        <!-- /.recommendation-2 -->
+        <div class="recommendation">
+          <div class="cube"></div>
+          <div class="recommendation__title">Movies</div>
+          <div class="recommendation__text">
+            <span>War Is Hell? In New Military Dramas, It’s One-Dimensional</span>
+          </div>
+        </div>
+        <!-- /. recommendation-3 -->
+        <div class="recommendation">
+          <div class="cube"></div>
+          <div class="recommendation__title">NFL</div>
+          <div class="recommendation__text">
+            <span>11 surprising stat rankings for active NFL players</span>
+            <img src="img/icons/recommended-play.svg" alt="Icon: Play">
+          </div>
+        </div>
+        <!-- /.recommendation-4 -->
+        <div class="recommendation">
+          <div class="cube"></div>
+          <div class="recommendation__title">Tech Reviews</div>
+          <div class="recommendation__text">
+            <span>The bookcases you can buy online and assemble yourself</span>
+          </div>
+        </div>
+        <!-- /.recommendation-5 -->
+      </div>
+      <!-- /.recomended__right -->
+    </div>
+    <!-- /.container -->
+  </div>
+  <!-- /.recomended --> 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="js/main.js"></script>
 </body>
