Create: recommendation section and responsive.

--- a/index.html
+++ b/index.html
@@ -142,64 +142,185 @@
     <!-- /.hotnews -->
   </div>
   <!-- /.overlay --> 
-  <div class="recomended">
-    <div class="container recomended-wrapper">
-      <div class="recomended__use">
-        <img class="recomended__img" src="img/recommended-1.jpg" alt="Image: Recomended 1">
+  <div class="recommended">
+    <div class="container recommended-wrapper">
+      <div class="recommended__use tab-active" data-tab="1">
+        <img class="recommended__img" src="img/recommended-1.jpg" alt="Image: recommended 1">
+        <div class="recommended__user">
+          <img src="img/recommended-avatar.jpg" alt="Image: Avatar" class="recommended__avatar">
+          <div class="recommended__text">
+            <span class="recommended__name">By Benjamin Turner</span>
+            <span class="recommended__class">Traveler</span>
+          </div>
+        </div>
+        <!-- /.recommended__user -->
+        <span class="recommended__description">Destinations</span>
+        <span class="recommended__use-title">In Southeast England, White Cliffs and Fish</span>
+        <div class="recommended__buttons">
+          <button class="button recommended__button">
+            <span>Read more</span>
+            <img src="img/icons/arrow.svg" alt="Icon: Arrow"> 
+          </button>
+          <div class="play-wrapper">
+            <button class="play recommended__play">
+              <img src="img/icons/play.svg" alt="Icon: Play">
+            </button>
+            <div class="play__description">
+              <span class="play__title">The chalk cliff of Beachy Head</span>
+              <span class="play__timecode">18:05</span>
+            </div>
+          </div>
+        </div>
+        <!-- /.recommended__buttons -->
       </div>
-      <!-- /.recomended__use -->
-      <div class="recomended__right">
-        <div class="recomended__title">
+      <!-- /.recommended__use 1 -->
+      <div class="recommended__use" data-tab="2">
+        <img class="recommended__img" src="img/recommended-2.jpg" alt="Image: recommended 1">
+        <div class="recommended__user">
+          <img src="img/recommended-avatar-2.jpeg" alt="Image: Avatar" class="recommended__avatar">
+          <div class="recommended__text">
+            <span class="recommended__name">By John Snow</span>
+            <span class="recommended__class">Researcher</span>
+          </div>
+        </div>
+        <!-- /.recommended__user -->
+        <span class="recommended__description">Destinations</span>
+        <span class="recommended__use-title">Storm Has Car Dealers Doing Swift Business</span>
+        <div class="recommended__buttons">
+          <button class="button recommended__button">
+            <span>Read more</span>
+            <img src="img/icons/arrow.svg" alt="Icon: Arrow"> 
+          </button>
+        </div>
+        <!-- /.recommended__buttons -->
+      </div>
+      <!-- /.recommended__use 2 -->
+      <div class="recommended__use" data-tab="3">
+        <img class="recommended__img" src="img/recommended-3.jpg" alt="Image: recommended 1">
+        <div class="recommended__user">
+          <img src="img/recommended-avatar-3.jpg" alt="Image: Avatar" class="recommended__avatar">
+          <div class="recommended__text">
+            <span class="recommended__name">By Sansa Stark</span>
+            <span class="recommended__class">Photographer</span>
+          </div>
+        </div>
+        <!-- /.recommended__user -->
+        <span class="recommended__description">Destinations</span>
+        <span class="recommended__use-title">War Is Hell? In New Military Dramas, It’s One-Dimensional</span>
+        <div class="recommended__buttons">
+          <button class="button recommended__button">
+            <span>Read more</span>
+            <img src="img/icons/arrow.svg" alt="Icon: Arrow"> 
+          </button>
+        </div>
+        <!-- /.recommended__buttons -->
+      </div>
+      <!-- /.recommended__use 3 -->
+      <div class="recommended__use" data-tab="4">
+        <img class="recommended__img" src="img/recommended-4.jpg" alt="Image: recommended 1">
+        <div class="recommended__user">
+          <img src="img/recommended-avatar-4.jpg" alt="Image: Avatar" class="recommended__avatar">
+          <div class="recommended__text">
+            <span class="recommended__name">By Ben Solo</span>
+            <span class="recommended__class">Сommentator</span>
+          </div>
+        </div>
+        <!-- /.recommended__user -->
+        <span class="recommended__description">Destinations</span>
+        <span class="recommended__use-title">11 surprising stat rankings for active NFL players</span>
+        <div class="recommended__buttons">
+          <button class="button recommended__button">
+            <span>Read more</span>
+            <img src="img/icons/arrow.svg" alt="Icon: Arrow"> 
+          </button>
+          <div class="play-wrapper">
+            <button class="play recommended__play">
+              <img src="img/icons/play.svg" alt="Icon: Play">
+            </button>
+            <div class="play__description">
+              <span class="play__title">The chalk cliff of Beachy Head</span>
+              <span class="play__timecode">18:05</span>
+            </div>
+          </div>
+        </div>
+        <!-- /.recommended__buttons -->
+      </div>
+      <!-- /.recommended__use 4 -->
+      <div class="recommended__use" data-tab="5">
+        <img class="recommended__img" src="img/recommended-5.jpg" alt="Image: recommended 1">
+        <div class="recommended__user">
+          <img src="img/recommended-avatar-5.jpg" alt="Image: Avatar" class="recommended__avatar">
+          <div class="recommended__text">
+            <span class="recommended__name">By Anduin Lotar</span>
+            <span class="recommended__class">Designer</span>
+          </div>
+        </div>
+        <!-- /.recommended__user -->
+        <span class="recommended__description">Destinations</span>
+        <span class="recommended__use-title">The bookcases you can buy online and assemble yourself</span>
+        <div class="recommended__buttons">
+          <button class="button recommended__button">
+            <span>Read more</span>
+            <img src="img/icons/arrow.svg" alt="Icon: Arrow"> 
+          </button>
+        </div>
+        <!-- /.recommended__buttons -->
+      </div>
+      <!-- /.recommended__use 5 -->
+      <div class="recommended__right">
+        <div class="recommended__title">
           <h2>Recommended for you</h2>
         </div>
-        <div class="recommendation">
-          <div class="cube"></div>
-          <div class="recommendation__title">Food</div>
-          <div class="recommendation__text">
-            <span>For Chicken-Fried Steak, Too Much Is Just Enough</span>
-            <img src="img/icons/recommended-play.svg" alt="Icon: Play">
+        <div class="recommendation-wrapper">
+          <div class="recommendation active" data-tab="1">
+            <div class="cube"></div>
+            <div class="recommendation__title">Food</div>
+            <div class="recommendation__text">
+              <span>For Chicken-Fried Steak, Too Much Is Just Enough</span>
+              <img src="img/icons/recommended-play.svg" alt="Icon: Play">
+            </div>
           </div>
-        </div>
-        <!-- /.recommendation-1 -->
-        <div class="recommendation">
-          <div class="cube"></div>
-          <div class="recommendation__title">Cars</div>
-          <div class="recommendation__text">
-            <span>Storm Has Car Dealers Doing Swift Business</span>
+          <!-- /.recommendation-1 -->
+          <div class="recommendation" data-tab="2">
+            <div class="cube"></div>
+            <div class="recommendation__title">Cars</div>
+            <div class="recommendation__text">
+              <span>Storm Has Car Dealers Doing Swift Business</span>
+            </div>
           </div>
-        </div>
-        <!-- /.recommendation-2 -->
-        <div class="recommendation">
-          <div class="cube"></div>
-          <div class="recommendation__title">Movies</div>
-          <div class="recommendation__text">
-            <span>War Is Hell? In New Military Dramas, It’s One-Dimensional</span>
+          <!-- /.recommendation-2 -->
+          <div class="recommendation" data-tab="3">
+            <div class="cube"></div>
+            <div class="recommendation__title">Movies</div>
+            <div class="recommendation__text">
+              <span>War Is Hell? In New Military Dramas, It’s One-Dimensional</span>
+            </div>
           </div>
-        </div>
-        <!-- /. recommendation-3 -->
-        <div class="recommendation">
-          <div class="cube"></div>
-          <div class="recommendation__title">NFL</div>
-          <div class="recommendation__text">
-            <span>11 surprising stat rankings for active NFL players</span>
-            <img src="img/icons/recommended-play.svg" alt="Icon: Play">
+          <!-- /. recommendation-3 -->
+          <div class="recommendation" data-tab="4">
+            <div class="cube"></div>
+            <div class="recommendation__title">NFL</div>
+            <div class="recommendation__text">
+              <span>11 surprising stat rankings for active NFL players</span>
+              <img src="img/icons/recommended-play.svg" alt="Icon: Play">
+            </div>
           </div>
-        </div>
-        <!-- /.recommendation-4 -->
-        <div class="recommendation">
-          <div class="cube"></div>
-          <div class="recommendation__title">Tech Reviews</div>
-          <div class="recommendation__text">
-            <span>The bookcases you can buy online and assemble yourself</span>
+          <!-- /.recommendation-4 -->
+          <div class="recommendation" data-tab="5">
+            <div class="cube"></div>
+            <div class="recommendation__title">Tech Reviews</div>
+            <div class="recommendation__text">
+              <span>The bookcases you can buy online and assemble yourself</span>
+            </div>
           </div>
+          <!-- /.recommendation-5 -->
         </div>
-        <!-- /.recommendation-5 -->
       </div>
-      <!-- /.recomended__right -->
+      <!-- /.recommended__right -->
     </div>
     <!-- /.container -->
   </div>
-  <!-- /.recomended --> 
+  <!-- /.recommended --> 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="js/main.js"></script>
 </body>
