Create: preview section and responsive

--- a/index.html
+++ b/index.html
@@ -420,7 +420,13 @@
     <!-- /.container -->
   </div>
   <!-- /.current-news -->
-  .
+  <div class="preview-new">
+    <h1 class="preview-new__title">The Big Bloom or «How Flowering Plants Changed the World»</h1>
+    <button class="button recommended__button">
+      <span>Read more</span>
+      <img src="img/icons/arrow.svg" alt="Icon: Arrow"> 
+    </button>
+  </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
