Create: news section and responsive

--- a/index.html
+++ b/index.html
@@ -427,7 +427,216 @@
       <img src="img/icons/arrow.svg" alt="Icon: Arrow"> 
     </button>
   </div>
-
+  <!-- /.preview-new -->
+  <div class="news">
+    <div class="container news-container">
+      <div class="main-section">
+        <div class="new new-first">
+          <div class="new-wrapper">
+            <img src="img/new-1.png" alt="Image: New 1" class="new__img">
+            <div class="new__description">
+              <span class="new__category">Flights</span>
+              <a href="#"><h2 class="new__title">Passengers Suffer as Crowded Field Puts Pressure on Europe’s Airlines</h2></a>
+              <span class="new__text">Weaker carriers have fallen by the wayside amid fierce competition, while others have been hit by bad luck. The result: thousands of canceled flights.</span>
+              <div class="new__footer">
+                <span class="new__footer-text">Aug 6</span>
+                <img src="img/icons/comment.svg" alt="Icon: Comment" class="new__icon">
+                <span class="new__footer-text">342</span>
+                <img src="img/icons/heart.svg" alt="Icon: Likes" class="new__icon">
+                <span class="new__footer-text">830</span>
+              </div>
+            </div>
+          </div>
+          <div class="bookmark" data-book="1">
+            <svg class="bookmark-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M5 1H15C16.1046 1 17 1.89543 17 3V19L10.0949 14L3 19V3C3 1.89543 3.89543 1 5 1Z" fill="#BCBFC2"/>
+            </svg>
+          </div>
+        </div>
+        <!-- /.new 1 -->
+        <div class="new">
+          <div class="new-wrapper">
+            <img src="img/new-2.png" alt="Image: New 2" class="new__img">
+            <div class="new__description">
+              <span class="new__category">Food</span>
+              <a href="#"><h2 class="new__title">Three Courses, 20 Euros: The Affordable Dining Renaissance in Paris</h2></a>
+              <span class="new__text">The Los Angeles area, for all of its culinary diversity, has not historically been thought of as a haven for bread lovers. The area has a reputation as a place where gluten fears to tread.</span>
+              <div class="new__footer">
+                <span class="new__footer-text">Oct 7</span>
+                <img src="img/icons/comment.svg" alt="Icon: Comment" class="new__icon">
+                <span class="new__footer-text">27</span>
+                <img src="img/icons/heart.svg" alt="Icon: Likes" class="new__icon">
+                <span class="new__footer-text">129</span>
+              </div>
+            </div>
+          </div>
+          <div class="bookmark" data-book="2">
+            <svg class="bookmark-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M5 1H15C16.1046 1 17 1.89543 17 3V19L10.0949 14L3 19V3C3 1.89543 3.89543 1 5 1Z" fill="#BCBFC2"/>
+            </svg>
+          </div>
+        </div>
+        <!-- /.new 2 -->
+        <div class="new">
+          <div class="new-wrapper">
+            <img src="img/new-3.png" alt="Image: New 3" class="new__img">
+            <div class="new__description">
+              <span class="new__category">Science</span>
+              <a href="#"><h2 class="new__title">Watch the High-Flying Physics of a Plant’s Exploding Fruits</h2></a>
+              <span class="new__text">Three undergradute physics majors and their professor worked out how the hairyflower wild petunia shoots tiny seeds more than 20 feet through the air</span>
+              <div class="new__footer">
+                <span class="new__footer-text">Oct 11</span>
+                <img src="img/icons/comment.svg" alt="Icon: Comment" class="new__icon">
+                <span class="new__footer-text">30</span>
+                <img src="img/icons/heart.svg" alt="Icon: Likes" class="new__icon">
+                <span class="new__footer-text">284</span>
+              </div>
+            </div>
+          </div>
+          <div class="bookmark" data-book="3">
+            <svg class="bookmark-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M5 1H15C16.1046 1 17 1.89543 17 3V19L10.0949 14L3 19V3C3 1.89543 3.89543 1 5 1Z" fill="#BCBFC2"/>
+            </svg>
+          </div>
+        </div>
+        <!-- /.new 3 -->
+        <div class="new">
+          <div class="new-wrapper">
+            <img src="img/new-4.png" alt="Image: New 4" class="new__img">
+            <div class="new__description">
+              <span class="new__category">Food</span>
+              <a href="#"><h2 class="new__title">How the Shape of Your Ears Affects What You Hear</h2></a>
+              <span class="new__text">We’re able to locate sound because our brains grasp the shape of our ears. When that shape changes, we need time and practice to adapt. Ears are a peculiarly individual piece of anatomy.</span>
+              <div class="new__footer">
+                <span class="new__footer-text">Oct 19</span>
+                <img src="img/icons/comment.svg" alt="Icon: Comment" class="new__icon">
+                <span class="new__footer-text">102</span>
+                <img src="img/icons/heart.svg" alt="Icon: Likes" class="new__icon">
+                <span class="new__footer-text">1,293</span>
+              </div>
+            </div>
+          </div>
+          <div class="bookmark" data-book="4">
+            <svg class="bookmark-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M5 1H15C16.1046 1 17 1.89543 17 3V19L10.0949 14L3 19V3C3 1.89543 3.89543 1 5 1Z" fill="#BCBFC2"/>
+            </svg>
+          </div>
+        </div>
+        <!-- /.new 4 -->
+        <div class="new">
+          <div class="new-wrapper">
+            <img src="img/new-5.png" alt="Image: New 5" class="new__img">
+            <div class="new__description">
+              <span class="new__category">Science</span>
+              <a href="#"><h2 class="new__title">Forests Protect the Climate. A Future With More Storms Would Mean Trouble.</h2></a>
+              <span class="new__text">With an increase in extreme weather expected in the years to come, forests could be changed permanently as the world continues to warm</span>
+              <div class="new__footer">
+                <span class="new__footer-text">Oct 22</span>
+                <img src="img/icons/comment.svg" alt="Icon: Comment" class="new__icon">
+                <span class="new__footer-text">5</span>
+                <img src="img/icons/heart.svg" alt="Icon: Likes" class="new__icon">
+                <span class="new__footer-text">82</span>
+              </div>
+            </div>
+          </div>
+          <div class="bookmark" data-book="5">
+            <svg class="bookmark-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M5 1H15C16.1046 1 17 1.89543 17 3V19L10.0949 14L3 19V3C3 1.89543 3.89543 1 5 1Z" fill="#BCBFC2"/>
+            </svg>
+          </div>
+        </div>
+        <!-- /.new 5 -->
+        <div class="new new-last">
+          <div class="new-wrapper">
+            <img src="img/new-6.png" alt="Image: New 6" class="new__img">
+            <div class="new__description">
+              <span class="new__category">Art & Design</span>
+              <a href="#"><h2 class="new__title">New Contemporary Institute Reverberates in Richmond’s Historic Landscape</h2></a>
+              <span class="new__text">The center, which will open in April, takes a bold look at race and other social issues that still resonate in the region as well as the nation. A new Institute for Contemporary Art is set to open.</span>
+              <div class="new__footer">
+                <span class="new__footer-text">Oct 26</span>
+                <img src="img/icons/comment.svg" alt="Icon: Comment" class="new__icon">
+                <span class="new__footer-text">101</span>
+                <img src="img/icons/heart.svg" alt="Icon: Likes" class="new__icon">
+                <span class="new__footer-text">432</span>
+              </div>
+            </div>
+          </div>
+          <div class="bookmark" data-book="6">
+            <svg class="bookmark-icon" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M5 1H15C16.1046 1 17 1.89543 17 3V19L10.0949 14L3 19V3C3 1.89543 3.89543 1 5 1Z" fill="#BCBFC2"/>
+            </svg>
+          </div>
+        </div>
+        <!-- /.new 6 -->
+      </div>
+      <!-- /.main-section -->
+      <div class="sidebar">
+        <h2 class="sidebar__title">Recommended for you</h2>
+        <div class="sidebar__item sidebar__item-1">
+          <img src="img/sidebar-1.png" alt="Image: Sidebar 1" class="sidebar__img">
+          <div class="sidebar__description">
+            <a href="#"><span class="sidebar__name">Office Meetings Leave the Office</span></a>
+            <span class="sidebar__time">15 minuts ago</span>
+          </div>
+        </div>
+        <!-- /.sidebar__item 1 -->
+        <div class="sidebar__item sidebar__item-2">
+          <img src="img/sidebar-2.png" alt="Image: Sidebar 2" class="sidebar__img">
+          <div class="sidebar__description">
+            <a href="#"><span class="sidebar__name">Experimental Vocal Music in Brooklyn</span></a>
+            <span class="sidebar__time">32 minuts ago</span>
+          </div>
+        </div>
+        <!-- /.sidebar__item 2 -->
+        <div class="sidebar__item sidebar__item-3">
+          <img src="img/sidebar-3.png" alt="Image: Sidebar 3" class="sidebar__img">
+          <div class="sidebar__description">
+            <a href="#"><span class="sidebar__name">Google’s Influence Over Think Tanks</span></a>
+            <span class="sidebar__time">38 minuts ago</span>
+          </div>
+        </div>
+        <!-- /.sidebar__item 3 -->
+        <div class="sidebar__item sidebar__item-4">
+          <img src="img/sidebar-4.png" alt="Image: Sidebar 4" class="sidebar__img">
+          <div class="sidebar__description">
+            <a href="#"><span class="sidebar__name">Homes for Sale in NYC and Connecticut</span></a>
+            <span class="sidebar__time">53 minuts ago</span>
+          </div>
+        </div>
+        <!-- /.sidebar__item 4 -->
+        <div class="sidebar__item sidebar__item-5">
+          <img src="img/sidebar-5.png" alt="Image: Sidebar 5" class="sidebar__img">
+          <div class="sidebar__description">
+            <a href="#"><span class="sidebar__name">Are You There, Dad? It’s Me, Alice</span></a>
+            <span class="sidebar__time">1 hour ago</span>
+          </div>
+        </div>
+        <!-- /.sidebar__item 5 -->
+        <div class="sidebar__item sidebar__item-6">
+          <img src="img/sidebar-6.png" alt="Image: Sidebar 6" class="sidebar__img">
+          <div class="sidebar__description">
+            <a href="#"><span class="sidebar__name">The New Punk Look: Lacy and Colorful</span></a>
+            <span class="sidebar__time">1 hour ago</span>
+          </div>
+        </div>
+        <!-- /.sidebar__item 6 -->
+        <div class="sidebar__item sidebar__item-7 last">
+          <img src="img/sidebar-7.png" alt="Image: Sidebar 7" class="sidebar__img">
+          <div class="sidebar__description">
+            <a href="#"><span class="sidebar__name">Sunday Best in Harlem and Brooklyn</span></a>
+            <span class="sidebar__time">2 hours ago</span>
+          </div>
+        </div>
+        <!-- /.sidebar__item 7 -->
+        <div class="sidebar__footer">
+          <a href="#" class="sidebar__link">Read more</a>
+        </div>
+      </div>
+      <!-- /.sidebar -->
+    </div>
+  </div>
+  <!-- /.news -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
   <script src="js/main.js"></script>
